# Let-It-Compile

./: .gitignore  CNAME  COMMANDS_REFERENCE.sh  CUPTI_PERFORMANCE_WARNING.md  FIX_SUMMARY.md  MY-RESEARCH.md  QUICK_START_CORRECTED.md  README.md  analyze_policy.py  check-for-packages.py  check_cuda.py  error-log.md  evaluate_learned_policy.py  help-understanding.md  implementation-plan.md  launch_tensorboard.py  open_docs.bat  open_docs.py  phase3_rollout_log.py  pyproject.toml  requirements.txt  test.py  test_cupti_robust.py  train_rl.py  training_analysis.py
.github/workflows/: pages-index.yml
Paper/: paper-draft_IEEE.tex
compiler/: __init__.py  ir_extractor.py  ptxas_controller.py
docs/: CNAME  README.md  index.html  script.js  styles.css
environment/: __init__.py  action_space.py  kernel_env.py  reward.py  state_space.py
experiments/: __init__.py  phase0_baseline_table.py  phase1_collect_counters.py  phase3_rollout_log.py  phase4_policy_rollout.py  phase7_rl_vs_baselines.py
kernels/: __init__.py  gemm.py  reduction.py  softmax.py
models/: __init__.py  gnn_encoder.py  phase_detector.py  policy.py
profiling/: __init__.py  cuda_timer.py  cupti_collector.py  metrics.py  ncu_utils.py  nvml_monitor.py
results/logs/: evaluations.npz  evaluations_rtx3050.npz  training_summary.json
results/tables/: README.md  phase1_result.csv  (+5 more)
scripts/: numba_nvvm_test.py  phase1_show_counters.py  rename_results_gpu_tag.py
tests/: __init__.py  conftest.py  test_cupti.py  test_environment.py  test_kernels.py
training/: __init__.py  train_phase_detector.py  train_rl.py
(+16 files in other folders)
